# segdup-caller

./: .gitignore  README.md  pyproject.toml  run.py
doc/: CFH.md  CYP2A6.md  CYP2B6.md  CYP2D6.md  GBA.md  HBA.md  IKBKG.md  LPA.md  OTOA.md  PMS2.md  RCCX.md  RH.md  SBDS.md  STRC.md  general.md
genecaller/: __main__.py  bam_process.py  conversion_detector.py  gene.py  gene_model.py  genecaller.py  logging.py  throttle.py  util.py
genecaller/calling/: cnv.py  phasing.py  polyphase_long.py  polyphase_short.py  small_var.py
genecaller/data/: CFH.vcf.gz.tbi  CFHR1-3.vcf.gz.tbi  CFHR1.vcf.gz.tbi  CFHR2-4.vcf.gz.tbi  CYP11B1.vcf.gz.tbi  CYP2D6.vcf.gz.tbi  CYP2D7.vcf.gz.tbi  GBA1.vcf.gz.tbi  GBAP1.vcf.gz.tbi  HBA.vcf.gz.tbi  IKBKG.vcf.gz.tbi  NCF1B.vcf.gz.tbi  PMS2.vcf.gz.tbi  PMS2CL.vcf.gz.tbi  RCCX2.vcf.gz.tbi  STRC.vcf.gz.tbi  STRCP1.vcf.gz.tbi  SentieonGeneCaller0.1.bundle  cyp2d6_star_alleles.tsv  genes.yaml  known_gene_conversions.tsv  pop_vcfs.yaml
genecaller/data/b37/: CFH.vcf.gz.tbi  CYP11B1.vcf.gz.tbi  CYP11B2.vcf.gz.tbi  CYP2A6.vcf.gz.tbi  CYP2A7.vcf.gz.tbi  CYP2B6.vcf.gz.tbi  CYP2B7P.vcf.gz.tbi  CYP2D6.vcf.gz.tbi  CYP2D7.vcf.gz.tbi  GBA1.vcf.gz.tbi  GBAP1.vcf.gz.tbi  HBA.vcf.gz.tbi  IKBKG.vcf.gz.tbi  IKBKGP1.vcf.gz.tbi  LPA_kiv2_catalog.npz  OTOA.vcf.gz.tbi  OTOAP1.vcf.gz.tbi  PMS2.vcf.gz.tbi  PMS2CL.vcf.gz.tbi  RCCX1.vcf.gz.tbi  RCCX2.vcf.gz.tbi  RHCE.vcf.gz.tbi  RHD.vcf.gz.tbi  SBDS.vcf.gz.tbi  SBDSP1.vcf.gz.tbi  SMN1.vcf.gz.tbi  SMN2.vcf.gz.tbi  STRC.vcf.gz.tbi  STRCP1.vcf.gz.tbi  cyp2a6_star_alleles.tsv  cyp2b6_star_alleles.tsv  cyp2d6_backbone.tsv  cyp2d6_star_alleles.tsv  genes.yaml  known_gene_conversions.tsv  rh_alleles.tsv
genecaller/data/hg19/: CFH.vcf.gz.tbi  CYP11B1.vcf.gz.tbi  CYP11B2.vcf.gz.tbi  CYP2A6.vcf.gz.tbi  CYP2A7.vcf.gz.tbi  CYP2B6.vcf.gz.tbi  CYP2B7P.vcf.gz.tbi  CYP2D6.vcf.gz.tbi  CYP2D7.vcf.gz.tbi  GBA1.vcf.gz.tbi  GBAP1.vcf.gz.tbi  HBA.vcf.gz.tbi  IKBKG.vcf.gz.tbi  IKBKGP1.vcf.gz.tbi  OTOA.vcf.gz.tbi  OTOAP1.vcf.gz.tbi  PMS2.vcf.gz.tbi  PMS2CL.vcf.gz.tbi  RCCX1.vcf.gz.tbi  RCCX2.vcf.gz.tbi  RHCE.vcf.gz.tbi  RHD.vcf.gz.tbi  SBDS.vcf.gz.tbi  SBDSP1.vcf.gz.tbi  SMN1.vcf.gz.tbi  SMN2.vcf.gz.tbi  STRC.vcf.gz.tbi  STRCP1.vcf.gz.tbi  cyp2a6_star_alleles.tsv  cyp2b6_star_alleles.tsv  cyp2d6_backbone.tsv  cyp2d6_star_alleles.tsv  genes.yaml  known_gene_conversions.tsv  pms2_psv_manifest.json  rh_alleles.tsv
genecaller/data/hg38/: CFH.vcf.gz.tbi  CYP11B2.vcf.gz.tbi  CYP2A6.vcf.gz.tbi  CYP2A7.vcf.gz.tbi  CYP2B6.vcf.gz.tbi  CYP2B7P.vcf.gz.tbi  GBAP1.vcf.gz.tbi  IKBKGP1.vcf.gz.tbi  NCF1.vcf.gz.tbi  OTOA.vcf.gz.tbi  OTOAP1.vcf.gz.tbi  PMS2.vcf.gz.tbi  PMS2A.vcf.gz.tbi  PMS2B.vcf.gz.tbi  PMS2CL.vcf.gz.tbi  RCCX1.vcf.gz.tbi  RHCE.vcf.gz.tbi  RHD.vcf.gz.tbi  SBDS.vcf.gz.tbi  SBDSP1.vcf.gz.tbi  SMN1.vcf.gz.tbi  SMN2.vcf.gz.tbi  cyp2a6_star_alleles.tsv  cyp2b6_backbone.tsv  cyp2b6_star_alleles.tsv  cyp2d6_backbone.tsv  genes.yaml  known_gene_conversions.tsv  pms2_psv_manifest.json  rh_alleles.tsv
genecaller/data/pop_vcfs/: segdup_pop-population-hprc-v2.0-20260528.b37.vcf.gz.tbi  (+7 more)
genecaller/genes/: __init__.py  cfh.py  cyp2a6.py  cyp2b6.py  cyp2d6.py  gba.py  hba.py  ikbkg.py  lpa.py  otoa.py  pms2.py  rccx.py  rh.py  sbds.py  strc.py
genecaller/scripts/: trimalt.py
